# e-cookbook-app

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: expert.py
backend/app/core/: config.py  expert_rules.py  expert_system.py
e_cookbook/interface/: main_window.py
e_cookbook/logic/: fuzzy_logic.py  prolog_connector.py  recipe_optimizer.py
e_cookbook/prolog/: baza_wiedzy.pl  fuzzy_logic.pl  recipe_optimizer.pl
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Footer.tsx  Header.tsx  LinkTile.tsx  RecipeCard.tsx
frontend/app/components/ui/: Card.tsx
frontend/app/expert/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: ExpertSystem.tsx  Layout.tsx  Navbar.tsx  RecipeSearch.tsx
frontend/types/: index.ts
